--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
